# Euclid

./: README.md  pyproject.toml
euclid/: __init__.py  conversation.py  mm_utils.py  utils.py
euclid/eval/: answer_parser.py  general_eval_prompt.json  run_euclid_geo.py  run_geo.py
euclid/model/: __init__.py  builder.py  consolidate.py  euclid_arch.py  utils.py
euclid/model/language_model/: euclid_llama.py  euclid_qwen.py
euclid/model/multimodal_encoder/: builder.py  dino_encoder.py  openclip_convnext_encoder.py  openclip_vit_encoder.py  siglip_encoder.py
euclid/train/: data_utils.py  euclid_train.py  euclid_trainer.py  preprocess.py  utils.py
image_engine/: produce_shape.py  question_engine.py  training_data_engine.py
image_engine/alphageometry/: README.md  defs.txt  graph.py  numericals.py  test.ipynb
scripts/empirical_study/: run.sh
scripts/euclid/: train.sh
